Bug 1857032 [Linux] Don't explicily call widget realize on nsWindow::Create() r=emilio

We don't need to call gtk_widget_realize() on nsWindow::Create() any more as we know if we use CSD decorations already.
Also use fast-path titlebar setting for unrealized widgets.

Differential Revision: https://phabricator.services.mozilla.com/D191172